# SnippetPad

./: .gitignore  claude-devlog.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
backup/: Codex-devlog.md  README.md
keys/: README.md  generate-keys.cjs  public.key
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BindEditor.tsx  KeyBadge.tsx
src/utils/: hotkey.ts
